# dbow_relocalization

./: CMakeLists.txt  README.md  gt.txt
DBoW2/: CMakeLists.txt
DBoW2/include/DBoW2/: TemplatedVocabulary.h
script/: bags.py
src/: DBOW.h  feature_extraction.cc  feature_training.cc  feature_training.cpp  gen_database.cpp  loop_closure.cpp  pose_estimation.cc  search_id.cc  search_id.cpp
